--- a/Alicargo/Views/AdminAwb/Edit.cshtml
+++ b/Alicargo/Views/AdminAwb/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.Mvc
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.AirWaybill.AwbAdminModel
 <div class="container-edit">
@@ -8,3 +9,7 @@
 	@Html.EditPage(Url.Action(MVC.AdminAwb.Edit()), Pages.Save,
 		@Html.Partial("EditButtons", (long)ViewBag.AwbId))
 </div>
+@section scripts
+{
+	@Scripts.Render(JsPaths.AwbFileButtonJs)
+}
