--- a/Alicargo/Views/SenderAwb/Edit.cshtml
+++ b/Alicargo/Views/SenderAwb/Edit.cshtml
@@ -1,7 +1,12 @@
-﻿@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.Mvc
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.AirWaybill.AwbSenderModel
 <div class="container-edit">
 	@Html.EditPage(Url.Action(MVC.SenderAwb.Edit()), Pages.Save,
 		@Html.Partial("EditButtons", (long)ViewBag.AwbId))
 </div>
+@section scripts
+{
+	@Scripts.Render(JsPaths.AwbFileButtonJs)
+}
