--- a/Alicargo/Views/SenderAwb/EditButtons.cshtml
+++ b/Alicargo/Views/SenderAwb/EditButtons.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Resources
 @model long
 		   
-@Html.ActionLink(Pages.Files, MVC.AwbFiles.Sender(Model), new { @class = "btn btn-info" })
+@Html.ActionLink(Pages.Files, MVC.AwbFiles.Sender(Model), new { @class = "btn btn-info", id = "files-button" })
