--- a/Alicargo/Views/ApplicationFiles/FilesHolder.cshtml
+++ b/Alicargo/Views/ApplicationFiles/FilesHolder.cshtml
@@ -3,5 +3,5 @@
 
 <b>@Alicargo.DataAccess.Contracts.Resources.ApplicationFileType.ResourceManager.GetString(Model.ToString())</b>
 <div data-type="@Model" data-app-id="@ViewBag.ApplicationId" class="files-holder">
-	<input id="@Model" name="file" type="file" />
+	<input id="appl-file-@Model" name="file" type="file" />
 </div>
