--- a/Alicargo/Views/AwbFiles/FilesHolder.cshtml
+++ b/Alicargo/Views/AwbFiles/FilesHolder.cshtml
@@ -3,5 +3,5 @@
 
 <b>@Alicargo.DataAccess.Contracts.Resources.AwbFileType.ResourceManager.GetString(Model.ToString())</b>
 <div data-type="@Model" data-awb-id="@ViewBag.AwbId" class="files-holder">
-	<input id="@Model" name="file" type="file" />
+	<input id="awb-file-@Model" name="file" type="file" />
 </div>
