--- a/Alicargo/Views/AdminAwb/EditorTemplates/AwbAdminModel.cshtml
+++ b/Alicargo/Views/AdminAwb/EditorTemplates/AwbAdminModel.cshtml
@@ -1,4 +1,5 @@
-﻿@using Alicargo.MvcHelpers.Extensions
+﻿@using System.Collections.Generic
+@using Alicargo.MvcHelpers.Extensions
 @inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AwbAdminModel>
 <div class="row">
 	<div class="span3">
