--- a/Alicargo/Views/ClientApplication/Edit.cshtml
+++ b/Alicargo/Views/ClientApplication/Edit.cshtml
@@ -1,10 +1,15 @@
-﻿@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.Mvc
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model ApplicationClientModel
 <div class="container-edit">
 	<h1>
 		@Pages.ApplicationEdit @ViewBag.ApplicationNumber
 	</h1>
-	@Html.EditPage(Url.Action(MVC.ClientApplication.Edit()), Pages.Update,
-	Html.ActionLink(Pages.Files, MVC.ApplicationFiles.ClientApplication((long)ViewBag.ApplicationId), new { @class = "btn btn-info" }))
+	@Html.EditPage(Url.Action(MVC.ClientApplication.Edit()), Pages.Update)
+	@Html.Action(MVC.ApplicationFiles.Client((long)ViewBag.ApplicationId))
 </div>
+@section scripts
+{
+	@Scripts.Render(JsPaths.ApplicationFilesJs)
+}
