--- a/Alicargo/Views/Application/Edit.cshtml
+++ b/Alicargo/Views/Application/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.Core.Resources
+@using Alicargo.Mvc
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model ApplicationAdminModel
@@ -7,7 +8,10 @@
 		@Pages.ApplicationEdit @ViewBag.ApplicationNumber
 		<span>@Entities.Nic: @Html.ViewBag.ClientNic</span>
 	</h1>
-	@Html.EditPage(Url.Action(MVC.Application.Edit()), Pages.Update,
-		Html.ActionLink(Pages.Files, MVC.ApplicationFiles.AdminApplication((long)ViewBag.ApplicationId),
-			new { @class = "btn btn-info" }))
+	@Html.EditPage(Url.Action(MVC.Application.Edit()), Pages.Update)
+	@Html.Action(MVC.ApplicationFiles.Admin((long)ViewBag.ApplicationId))
 </div>
+@section scripts
+{
+	@Scripts.Render(JsPaths.ApplicationFilesJs)
+}
