--- a/Alicargo/Views/ApplicationList/AdminTemplate.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminTemplate.cshtml
@@ -1,11 +1,11 @@
 ﻿@using System.Globalization
+@using System.Linq
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
 @inherits BaseWebViewPage<ApplicationIndexModel>
 @helper EditButton()
 {
 	<a href="@Url.Action(MVC.Application.Edit())/#= Id #" class="btn btn-primary">@Pages.Edit</a>
-	<a href="@Url.Action(MVC.ApplicationFiles.AdminApplication())/#= Id #" class="btn btn-info">@Pages.Files</a>
 	<button type="button" class="btn btn-danger delete-application">@Pages.Delete</button>
 }
 @helper CloseButton()
