hided broker select from sender

--- a/Alicargo/Views/Home/Index.cshtml
+++ b/Alicargo/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="home-page">
-	<div class="row">
+	@*<div class="row">
 		<div class="span6 text-right">
 			<p>Italia - <b>ALICARGO srl</b></p>
 			<p>Civitanova Marche(MC) zona industriale"A" 62012, via Lamborghini 1</p>
@@ -12,5 +12,5 @@
 			<p>8 800 555 85 23</p>
 			<p>msk@alicargo.ru</p>
 		</div>
-	</div>
+	</div>*@
 </div>
