--- a/Alicargo/Views/AwbFiles/Broker.cshtml
+++ b/Alicargo/Views/AwbFiles/Broker.cshtml
@@ -16,7 +16,7 @@
 		@Html.Partial("FilesHolder", AwbFileType.Packing)
 	</div>
 	<div class="span3">
-		@Html.Partial("FilesHolder", AwbFileType.Draw)
+		@Html.Partial("FilesHolder", AwbFileType.AWB)
 	</div>
 	<div class="span3">
 		@Html.Partial("FilesHolder", AwbFileType.Other)
