--- a/Alicargo/Views/Balance/History.cshtml
+++ b/Alicargo/Views/Balance/History.cshtml
@@ -1,4 +1,5 @@
-﻿@using Alicargo.Core.Resources
+﻿@using System
+@using Alicargo.Core.Resources
 @using Alicargo.Utilities.Localization
 @using Resources
 @using Alicargo.DataAccess.Contracts.Contracts.User
