--- a/Alicargo/Views/Balance/History.cshtml
+++ b/Alicargo/Views/Balance/History.cshtml
@@ -1,5 +1,4 @@
-﻿@using System
-@using Alicargo.Core.Resources
+﻿@using Alicargo.Core.Resources
 @using Alicargo.Utilities.Localization
 @using Resources
 @using Alicargo.DataAccess.Contracts.Contracts.User
