--- a/Alicargo/Views/RegistryOfPayments/Index.cshtml
+++ b/Alicargo/Views/RegistryOfPayments/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Alicargo.Mvc
+@using Resources
+<h1>@Pages.RegistryOfPayments</h1>
 <div id="payment-grid" class="grid"></div>
 @section scripts
 {
