--- a/Alicargo/Views/Balance/History.cshtml
+++ b/Alicargo/Views/Balance/History.cshtml
@@ -1,8 +1,7 @@
 ﻿@using Alicargo.Core.Resources
 @using Alicargo.Utilities.Localization
 @using Resources
-@using Alicargo.DataAccess.Contracts.Contracts.User
-@model ClientBalanceHistoryItem[]
+@model Alicargo.DataAccess.Contracts.Contracts.Calculation.ClientBalanceHistoryItem[]
 @if(Model.Length > 0)
 {
 	<b>
