--- a/Alicargo/Areas/Forwarder/Views/ApplicationList/Index.cshtml
+++ b/Alicargo/Areas/Forwarder/Views/ApplicationList/Index.cshtml
@@ -2,12 +2,12 @@
 @using Alicargo.Mvc
 @using Resources
 @inherits Alicargo.MvcHelpers.BaseWebViewPage<Alicargo.ViewModels.Application.ApplicationIndexModel>
-@Html.ActionLink(Pages.Excel, MVC.Excel.Applications(), new { @class = "btn btn-info" })
+<p>
+	@Html.ActionLink(Pages.Excel, MVC.Excel.Applications(), new { @class = "btn btn-info" })
+</p>
 <div id="application-grid" class="grid"></div>
-<script type="text/x-kendo-template" id="application-grid-details">
-</script>
-
+<script type="text/x-kendo-template" id="application-grid-details"></script>
 @section scripts
 {
-	@Scripts.Render(JsPaths.ApplicationListJs)
+	@Scripts.Render(JsPaths.ForwarderApplicationListJs)
 }
