renamed applications controller

--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -16,7 +16,7 @@
 {
 	if(IdentityService.IsInRole(RoleType.Forwarder))
 	{
-		<li>@Html.ActionLink(Pages.Applications, MVC.ForwarderArea.ApplicationList.Index())</li>
+		<li>@Html.ActionLink(Pages.Applications, MVC.ForwarderArea.Applications.Index())</li>
 	}
 }
 @helper CarrierMenu()
