--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<meta name="google-site-verification" content="Xxal5fI_RjS8LVjdslBB645vRbt8zTWp9-8QVb5knz8" />
+
 		<title>Alicargo</title>
 		<link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,7 +25,7 @@
 				break;
 		}
 	</head>
-	<body>
+	<body>		
 		<div id="wrap">
 			@Html.Partial("Memu")
 			<div class="container">
