--- a/Alicargo/Views/ForwarderUser/Create.cshtml
+++ b/Alicargo/Views/ForwarderUser/Create.cshtml
@@ -5,5 +5,5 @@
 	<h1>
 		@Pages.Add
 	</h1>
-	@Html.EditPage(Url.Action(MVC.Forwarder.Create()), Pages.Save)
+	@Html.EditPage(Url.Action(MVC.ForwarderUser.Create()), Pages.Save)
 </div>
