--- a/Alicargo/Views/ForwarderUser/Edit.cshtml
+++ b/Alicargo/Views/ForwarderUser/Edit.cshtml
@@ -5,5 +5,5 @@
 	<h1>
 		@Pages.Edit
 	</h1>
-	@Html.EditPage(Url.Action(MVC.Forwarder.Edit()), Pages.Save)
+	@Html.EditPage(Url.Action(MVC.ForwarderUser.Edit()), Pages.Save)
 </div>
