--- a/Alicargo/Views/User/Index.cshtml
+++ b/Alicargo/Views/User/Index.cshtml
@@ -44,7 +44,7 @@
 			break;
 
 		case RoleType.Forwarder:
-			@Html.ActionLink(Pages.Add, MVC.Forwarder.Create())
+			@Html.ActionLink(Pages.Add, MVC.ForwarderUser.Create())
 			break;
 
 		case RoleType.Carrier:
