setup print page

--- a/Alicargo/Views/Sender/Edit.cshtml
+++ b/Alicargo/Views/Sender/Edit.cshtml
@@ -2,8 +2,13 @@
 @using Resources
 @model Alicargo.ViewModels.User.SenderModel
 <div class="container-edit">
-	<h1>
-		@Pages.SenderEdit
-	</h1>
-	@Html.EditPage(Url.Action(MVC.Sender.Edit()), Pages.Save)
+    <h1>
+        @Pages.SenderEdit
+    </h1>
+    @Html.EditPage(Url.Action(MVC.Sender.Edit()), Pages.Save,
+        new MvcHtmlString("<a href='"
+                          + Url.Action(MVC.ApplicationPrint.Index((long)ViewBag.ApplicationId))
+                          + "' target='blank' class='btn btn-success'>"
+                          + Pages.Print
+                          + "</a>"))
 </div>
