--- a/Alicargo/Views/Shared/_PopupLayout.cshtml
+++ b/Alicargo/Views/Shared/_PopupLayout.cshtml
@@ -7,7 +7,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Alicargo</title>
+	<title>Avion Russia</title>
 	<link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	@Styles.Render(CssPaths.Common)
