--- a/Alicargo/Views/ApplicationPrint/Index.cshtml
+++ b/Alicargo/Views/ApplicationPrint/Index.cshtml
@@ -10,10 +10,18 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <style>
         html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
         }
 
         .container {
-            
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
         }
 
         span {
@@ -31,7 +39,7 @@
         <span class="text">
             @Html.DisplayFor(model => model.Text)
         </span>
-        <hr />
+        <br />
         <span>
             @Html.DisplayFor(model => model.City)
         </span>
