--- a/Alicargo/Views/ApplicationFiles/Sender.cshtml
+++ b/Alicargo/Views/ApplicationFiles/Sender.cshtml
@@ -10,3 +10,14 @@
 		@Html.Partial("FilesHolder", ApplicationFileType.Swift)
 	</div>
 </div>
+
+<div class="row">
+	<div class="span4">
+		@Html.Partial("FilesHolder", ApplicationFileType.T1)
+	</div>
+	<div class="span4">
+		@Html.Partial("FilesHolder", ApplicationFileType.Ex1)
+	</div>
+	<div class="span4">
+	</div>
+</div>
