--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -27,6 +27,8 @@
 			<li>SwiftFiles - Название файла SWIFT</li>
 			<li>DeliveryBillFiles - Название файла Счет за доставку</li>
 			<li>Torg12Files -  Название файла  ТОРГ12</li>
+			<li>T1Files -  Название файла T1</li>
+			<li>Ex1Files -  Название файла EX-1</li>
 			<li>DateOfCargoReceipt - Дата получения груза</li>
 			<li>TransitReference - Транзитный референс</li>
 			<li>CarrierName - Курьер</li>
