--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 	</head>
 	<body>		
 		<div id="wrap">
-			@Html.Partial("Memu")
+			@Html.Partial("Menu")
 			<div class="container">
 				@RenderBody()
 			</div>			
