--- a/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
+++ b/Alicargo/Views/Client/EditorTemplates/ClientModel.cshtml
@@ -1,6 +1,7 @@
-﻿@using Alicargo.MvcHelpers.Extensions
+﻿@using Alicargo.DataAccess.Contracts.Enums
+@using Alicargo.MvcHelpers.Extensions
 @using Resources
-@model Alicargo.ViewModels.User.ClientModel
+@inherits BaseWebViewPage<Alicargo.ViewModels.User.ClientModel>
 
 <div class="row">
 	<div class="span8">
@@ -23,7 +24,7 @@
 				? null
 				: Model.ContractFileName,
 			Model != null && Model.ContractFileName != null
-				? @Url.Action(MVC.Client.Contract((long?)ViewBag.ClientId))
+				? @Url.Action(MVC.Client.Contract((long?) ViewBag.ClientId))
 				: null)
 	</div>
 	<div class="span4">
@@ -48,17 +49,20 @@
 		</script>
 	</div>
 </div>
-<div class="row">
-	<div class="span4">
-		@Html.LabelFor(x => x.DefaultSenderId)
-		@Html.DropDownListFor(x => x.DefaultSenderId, (IDictionary<long?, string>)ViewBag.Senders, "")
+@if (IdentityService.IsInRole(RoleType.Admin) || IdentityService.IsInRole(RoleType.Manager))
+{
+	<div class="row">
+		<div class="span4">
+			@Html.LabelFor(x => x.DefaultSenderId)
+			@Html.DropDownListFor(x => x.DefaultSenderId, (IDictionary<long?, string>) ViewBag.Senders, "")
+		</div>
 	</div>
-</div>
+}
 <hr />
 <h4>
 	@Pages.Transit
 </h4>
-@Html.Action(MVC.Transit.EditByClient((long?)ViewBag.ClientId))
+@Html.Action(MVC.Transit.EditByClient((long?) ViewBag.ClientId))
 <hr />
 <h4>
 	@Pages.Authentication
