cleaned home page

--- a/Alicargo/Views/Home/Index.cshtml
+++ b/Alicargo/Views/Home/Index.cshtml
@@ -1,236 +1,11 @@
 ﻿<div class="home-page">
-	@if(!HttpContext.Current.User.Identity.IsAuthenticated)
+	@if (!HttpContext.Current.User.Identity.IsAuthenticated)
 	{
-		<div class="home-head">
+		<div class="form-signin-container">
 			@Html.Partial("LoginControl")
 		</div>
 	}
-	<div class="row-fluid">
-		<div class="span6">
-			<span>
-				MILAN HEAD OFFICE
-			</span>
-			<span>
-				AVION Company S.p.A.<br />
-				Via Di Vittorio 37 - 20068 - Peschiera Borromeo (MI)<br />
-				Phn (02) 55364011 (Hunting)<br />
-				Web:http://www.avioninternational.com
-			</span>
-		</div>
-		<div class="span6">
-			<span>
-				SWITZERLAND
-			</span>
-			<span>
-				AVION INTERNATIONAL SA<br />
-				Via Passeggiata 7 6883 Novazzano - Switzerland<br />
-				Phone nr.+41 (0) 91 695 21 10 - Fax +41 (0) 91 682 78 65<br />
-				Email: stefano.scardino@avioninternational.ch
-			</span>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span6">
-			<span>
-				FIRENZE
-			</span>
-			<span>
-				AVION Company S.p.A.<br />
-				Via Sandro Pertini, 5 - 50019 Sesto Fiorentino (FI)<br />
-				Phn (055) 459971<br />
-				Mr Alessandro Parenti: Branch Manager<br />
-				E-mail: alessandro.parenti@avioninternational.com
-			</span>
-		</div>
-		<div class="span6">
-			<span>
-				SHENZEN
-			</span>
-			<span>
-				AVION Shipping Co.Ltd.<br />
-				RM 30E, HUIFUGE, CAIFU BLDG. - SOUTH CAITAN RD. SHENZEN<br />
-				Phn (00755) 8295 4854 - Fax (00755) 8295 2379<br />
-				Mr Jerry Shang - Branch Manager<br />
-				E-mail: rjerry.shang@avioninternational.com
-			</span>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span6">
-			<span>VICENZA</span>
-			<span>
-				AVION Company S.p.A.<br />
-				Via Retrone, 62/64 - 36077 Altavilla Vicentina (VI)<br />
-				Phn (0444) 341188<br />
-				Mr Claudio Corato: Branch Manager<br />
-				E-mail: claudio.corato@avioninternational.com
-			</span>
-		</div>
-		<div class="span6">
-			<span>
-				SHANGHAI
-			</span>
-			<span>
-				AVION Company Shanghai Oce Ltd.<br />
-				RM 412 FRIENDSHIP BLDG 26 SICHUAN - Shanghai, China 200002<br />
-				Phn (8621) 63284802/63287342 fax (8621)63286449<br />
-				Mr Grace Zhang - Branch Manager<br />
-				E-mail: grace.zhang@avioninternational.com
-			</span>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span6">
-			<span>TREVISO / VENICE</span>
-			<span>
-				AVION Company S.p.A.<br />
-				Via Spinè n. 26/B, 3104 ODERZO (TV)<br />
-				Phn (0422) 363278 (Operations)<br />
-				Mrs Silvia Moro: Branch Manager<br />
-				E-mail: silvia.moro@avioninternational.com
-			</span>
-		</div>
-		<div class="span6">
-			<span>
-				SYDNEY
-			</span>
-			<span>
-				AVION INT'L PTY Ltd.<br />
-				88 Perry Street, Matraville, NSW 2036, Australia<br />
-				Phn +61 (2) 9326 8400 fax +61 (2) 9326 8499<br />
-				Mr. Marco Viglietta - Managing Director<br />
-				E-mail: MarcoV@avionaustralia.com
-			</span>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span6">
-			<span>MALPENSA AIRPORT</span>
-			<span>
-				AVION Company S.p.A.<br />
-				Via del Greggie 100 - 21015 Lonate Pozzolo (VA)<br />
-				AEROPORTO MALPENSA<br />
-				Phn 0331-66691 r.a. Mobile: 0039-348-7340020<br />
-				Dario Marcolin : Business Unit Import Manager<br />
-				E-mail: dario.marcolin@avioninternational.com
-			</span>
-		</div>
-		<div class="span6">
-			<span>
-				GUANGZHOU
-			</span>
-			<span>
-				AVION Shipping Co.Ltd.<br />
-				Room A04. 10/f., East Tower, Yuexiu Neo-Metropolis<br />
-				- N. 232 Zhonshan Lu Road<br />
-				Phn +86 20 8108 0639 - Fax +86 20 8108 0656<br />
-				Mrs Katherine Zeng - Branch Manager<br />
-				E-mail: katherine.gz@avionhkg.com.hk
-			</span>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span6">
-			<span>BOLOGNA</span>
-			<span>
-				AVION Company S.p.A.<br />
-				Viale della Mercanzia 116 Blocco 2A Centergross<br />
-				40050 FUNO DI ARGELATO (BOLOGNA)<br />
-				Phn ( 051) 8659408 - 862813 Hunting<br />
-				Fabrizio Corona : Business Unit Manager<br />
-				E-mail:fabrizio.corona@avioninternational.com
-			</span>
-		</div>
-		<div class="span6">
-			<span>
-				SINGAPORE
-			</span>
-			<span>
-				AVION SHIPPING (S) PTE Ltd.<br />
-				119 Airport Cargo Road # 03-03 - Changi Cargo Agent Megaplex 1,<br />
-				P.O.Box 648 SINGAPORE 918105 - SG<br />
-				Phn +65 6785 5282 - Fax +65 6785 52021<br />
-				Mr Dex Tan<br />
-				E-mail: general@avionsingapore.com.sg
-			</span>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span6">
-			<span>ROMA</span>
-			<span>
-				AVION Company S.p.A.<br />
-				Cargo City 00050 FIUMICINO AEREOPORTO - ROMA<br />
-				Phn (06) 659528808<br />
-				Palmiro Di Mascio : Business Unit Manager<br />
-				E-mail:palmiro.dimascio@avioninternational.com
-			</span>
-		</div>
-		<div class="span6">
-			<span>
-				HONG KONG
-			</span>
-			<span>
-				AVION Shipping Co.Ltd.<br />
-				Unit B, Ground Floor,G/F – 2/F , Block A , Union Industrial Building<br />
-				- 27 KO FAI ROAD YAU TONG - KOWLOON<br />
-				Phn (852)2323 6012 - Fax (852) 2752 8951<br />
-				Mr Raymond Lee - Managing Director<br />
-				E-mail: raymond@avionhkg.com.hk
-			</span>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span6">
-			<span>TURIN</span>
-			<span>
-				AVION Company S.p.A.<br />
-				Via Massari 189/A - 10148 TORINO<br />
-				Phn (011) 2428020<br />
-				Mrs. Manuela Giordano: Branch Manager<br />
-				E-mail: manuela.giordano@avioninternational.com
-			</span>
-		</div>
-		<div class="span6">
-			<span>
-				JAPAN
-			</span>
-			<span>
-				AVION International Japan Co.,Ltd<br />
-				Chuo-Ku Tokyo 103-0015, Japan HAKOZAKI MASUKI BLDG<br />
-				4F 17-9 Hakozaki-Chou Nihonbashi<br />
-				Ph.: 0081 (0)3-6667-0069 | mobile: 0081 080-8834-1631<br />
-				Mr Yasuyuki Ohtake - Managing Director<br />
-				E-mail: yasuyukiohtake@avioninternationaljapan.com
-			</span>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span6">
-			<span>CIVITANOVA MARCHE</span>
-			<span>
-				D.S. INTERNATIONAL<br />
-				Contrada Campiglione 20 63900 Fermo (FM) (Italy)<br />
-				Tel. +39 0734871281 | Mobile 334 8994946<br />
-				Mrs. Stefano Sabbatini : Branch Manager<br />
-				E-mail: s.sabbatini@dsinternational.it
-			</span>
-		</div>
-		<div class="span6">
-			<span>
-				RUSSIA
-			</span>
-			<span>
-				AVION RUSSIA LTD<br />
-				Moscow, World Trade Center, Block A, offce 307-308<br />
-				Tel. 8 800 555 8523 | Mobile +7 917 5787727<br />
-				Mrs. Yaroslav Nadin : Branch Manager<br />
-				E-mail: ynadin@avion.moscow
-			</span>
-		</div>
-	</div>
 	<div class="home-footer">
-		FIATA Cargo Agency | IATA Code 38.4723.7001/6 | FIATA | ITALIAN FORWARDERS ASSOCIATION| ANAMA/ALSEA
 	</div>
 	<div class="wrap-padding">&nbsp;</div>
 </div>
