removed avion mentions

--- a/Alicargo/Views/Shared/Menu.cshtml
+++ b/Alicargo/Views/Shared/Menu.cshtml
@@ -119,7 +119,7 @@
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 					<i class="icon-tasks"></i>
 				</a>
-				@Html.ActionLink("Avion Russia", MVC.Home.Index(), new {@class = "brand"})
+				@Html.ActionLink("Tracker", MVC.Home.Index(), new { @class = "brand" })
 
 				<div class="nav-collapse collapse">
 					<ul class="nav">
