--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 		<meta charset="utf-8" />
 		<meta name="google-site-verification" content="Xxal5fI_RjS8LVjdslBB645vRbt8zTWp9-8QVb5knz8" />
 
-		<title>Avion Russia</title>
+		<title>Tracker</title>
 		<link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		@Styles.Render(CssPaths.Common)
