--- a/Alicargo/Views/ApplicationPrint/Index.cshtml
+++ b/Alicargo/Views/ApplicationPrint/Index.cshtml
@@ -6,7 +6,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Avion Russia</title>
+    <title>Tracker</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <style>
         html, body {
