removed style for volume

--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -31,7 +31,7 @@
 		@Html.DropDownListForEnum(model => model.MethodOfDelivery)
 	</div>
 	<div class="span3">
-		<label for="@Html.IdFor(x => x.Volume)">@Entities.Volume (m<span class="super">3</span>&nbsp;)</label>
+		<label for="@Html.IdFor(x => x.Volume)">@Entities.Volume (m3)</label>
 		@Html.EditorFor(model => model.Volume)
 		@Html.EditorWithLabelFor(model => model.Weight)
 		@Html.EditorWithLabelFor(model => model.Count)
