--- a/Alicargo/Views/ApplicationList/ClientDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/ClientDetails.cshtml
@@ -34,7 +34,7 @@
 # } #
 # if(Volume != null){ #
 <p>
-	<span>@Entities.Volume (m<span style="vertical-align: super">3</span>):</span>
+	<span>@Entities.Volume (m3):</span>
 	#= Volume #
 </p>
 # } #
