--- a/Alicargo/Views/ApplicationList/SenderDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderDetails.cshtml
@@ -32,7 +32,7 @@
 # } #
 # if(Volume != null){ #
 <p>
-	<span style="position: relative;">@Entities.Volume (m<span class="super">3</span> ):</span>
+	<span>@Entities.Volume (m3):</span>
 	#= Volume #
 </p>
 # } #
