--- a/Alicargo/Views/ClientApplication/EditorTemplates/ApplicationClientModel.cshtml
+++ b/Alicargo/Views/ClientApplication/EditorTemplates/ApplicationClientModel.cshtml
@@ -29,7 +29,7 @@
 		@Html.EditorWithLabelFor(model => model.Currency)
 		@Html.EditorWithLabelFor(model => model.Weight)
 		@Html.EditorWithLabelFor(model => model.Count)
-		<label for="@Html.IdFor(x => x.Volume)">@Entities.Volume (m<span class="super">3</span>&nbsp;)</label>
+		<label for="@Html.IdFor(x => x.Volume)">@Entities.Volume (m3)</label>
 		@Html.EditorFor(model => model.Volume)
 	</div>
 </div>
