added MRN and CountInInvoce fields

--- a/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationAdminModel.cshtml
@@ -10,6 +10,7 @@
 		@Html.EditorWithLabelFor(model => model.Invoice)
 		@Html.EditorWithLabelFor(model => model.Characteristic)
 		@Html.EditorWithLabelFor(model => model.TermsOfDelivery)
+		@Html.EditorWithLabelFor(model => model.MRN)		
 	</div>
 	<div class="span3">
 		@Html.EditorWithLabelFor(model => model.FactoryEmail)
@@ -17,6 +18,7 @@
 		@Html.EditorWithLabelFor(model => model.FactoryContact)
 		@Html.EditorWithLabelFor(model => model.WarehouseWorkingTime)
 		@Html.EditorWithLabelFor(model => model.AddressLoad)
+		@Html.EditorWithLabelFor(model => model.CountInInvoce)
 	</div>
 	<div class="span3">
 		@Html.LabelFor(x => x.CountryId)
