--- a/Alicargo/Views/EmailTemplate/Help.cshtml
+++ b/Alicargo/Views/EmailTemplate/Help.cshtml
@@ -69,6 +69,8 @@
 			<li>SenderAddress - Отправитель, адрес</li>
 			<li>SenderEmail - Отправитель, email</li>
 			<li>ForwarderName - Имя перевозчика</li>
+			<li>MRN - MRN</li>
+			<li>CountInInvoce - Количество в инвойсе</li>
 		</ul>
 	</p>
 	<p>
